--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
           <h2 class="prices-title"></h2>
           <p class="prices-text">
 			<b><i class="fa fa-asterisk"></i>
-            Crucial Hemp is committed to delivering the highest quality CBD products at the best prices. </b>
+            Crucial Hemp is committed to delivering the highest quality products at the best prices. </b>
           </p>
           <p class="prices-text">
 		  <b><i class="fa fa-asterisk"></i>
-            If you purchase CBD products from Crucial Hemp and later find that another company is advertising lower prices on products that are comparable in quality and potency to Crucial Hemp products, please contact us and we will be pleased to reimburse you 110% of the difference between your costs and the advertised prices.</b>
+            If you purchase products from Crucial Hemp and later find that another company is advertising lower prices on products that are comparable in quality and potency to Crucial Hemp products, please contact us and we will be pleased to reimburse you 110% of the difference between your costs and the advertised prices.</b>
           </p>
 	  <p class="prices-text">
 		  <b><i class="fa fa-asterisk"></i>
